完善cpt和user服务的分页获取功能
